# ghost

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ghost-diag.txt  log  rustfmt.toml
.githooks/: pre-commit
conformance/: README.md  run.sh
conformance/esctest2/: .pinned-commit
docs/: architecture-review.md
frontends/ghost-gtk/: Cargo.toml
frontends/ghost-gtk/.cargo/: config.toml
frontends/ghost-gtk/src/: main.rs  settings.rs
frontends/ghost-gtk/xtask/: Cargo.toml
frontends/ghost-gtk/xtask/src/: main.rs
frontends/ghost-ui/: Cargo.toml
frontends/ghost-ui/app/: Cargo.toml
frontends/ghost-ui/app/src/: bench.rs  config.rs  encode.rs  from_winit.rs  main.rs  mouse.rs  resize.rs  session_view.rs
frontends/ghost-ui/app/tests/: session_capture.rs
frontends/ghost-ui/core/: Cargo.toml
frontends/ghost-ui/core/src/: cmd.rs  encode.rs  event.rs  fleet.rs  input.rs  lib.rs  mouse.rs  root.rs  terminal.rs
frontends/ghost-ui/docs/: window-decorations.md
frontends/ghost-ui/harness/: Cargo.toml
frontends/ghost-ui/harness/src/: framestats.rs  lib.rs
frontends/ghost-ui/harness/tests/: shell.rs
frontends/ghost-ui/renderer/: Cargo.toml
frontends/ghost-ui/renderer/src/: lib.rs  target.rs
frontends/ghost-ui/renderer/tests/: render.rs
frontends/ghost-ui/shaper/: Cargo.toml
frontends/ghost-ui/shaper/src/: lib.rs
frontends/ghost-ui/shaper/tests/: shaping.rs
frontends/ghost-ui/shot/: Cargo.toml
frontends/ghost-ui/shot/src/: main.rs
ghost-cli/: Cargo.toml
ghost-cli/src/: lib.rs  main.rs
ghost-cli/tests/: attach.rs  bell.rs  child_term.rs  detached_query.rs  gui_session.rs  host_reexec.rs  lifecycle.rs  record.rs
ghost-host/: Cargo.toml
ghost-host/src/: main.rs
ghost-host/tests/: host.rs
ghost-render/: Cargo.toml
ghost-render/src/: cache.rs  lib.rs  scene.rs
ghost-renderer/: Cargo.toml
ghost-renderer/src/: lib.rs  target.rs
ghost-renderer/tests/: gpu_bench.rs  render.rs  smoke.rs
ghost-shaper/: Cargo.toml
ghost-shaper/src/: colr.rs  lib.rs
ghost-shaper/tests/: shaping.rs
ghost-shaper/tests/assets/: README.md
ghost-shot/: Cargo.toml
ghost-shot/src/: main.rs
ghost-term/: Cargo.toml  README.md
ghost-term/benches/: charset.rs  parser.rs  vt.rs
ghost-term/examples/: text.rs
ghost-term/proptest-regressions/: parser.txt  vt.txt
ghost-term/src/: buffer.rs  cell.rs  color.rs  graphics.rs  lib.rs  line.rs  links.rs  parser.rs  pen.rs  policy.rs  terminal.rs  vt.rs
ghost-term/src/terminal/: cursor.rs
ghost-term/tests/: damage_audit.rs  integration_test.rs
ghost-ui/: Cargo.toml
ghost-ui-core/: Cargo.toml
ghost-ui-core/proptest-regressions/: terminal.txt
ghost-ui-core/src/: cmd.rs  event.rs  fleet.rs  group.rs  lib.rs  root.rs  terminal.rs  text_input.rs  workspace.rs
ghost-ui-harness/: Cargo.toml
ghost-ui-harness/src/: framestats.rs  lib.rs
ghost-ui-harness/tests/: shell.rs  windowed.rs
ghost-ui/src/: bench.rs  config.rs  font.rs  from_winit.rs  groups.rs  instance.rs  main.rs  menu.rs  pacer.rs  rendertrace.rs  resize.rs  windows.rs
ghost-ui/tests/: attach.rs  attached_flag.rs  child_term.rs  deferred_start.rs  descriptor.rs  detached_query.rs  gui_cwd.rs  gui_session.rs  headless_client.rs  lifecycle.rs  menu_macos.rs  policy_negotiation.rs  proto_compat.rs  pty_backpressure.rs  reattach_size.rs  record.rs  recreate.rs  restart.rs  search.rs  self_upgrade.rs  session_capture.rs  session_meta.rs  ssh.rs  ssh_reboot.rs  ssh_remote.rs  ssh_transport.rs  subscribe.rs  watch.rs
ghost-vt/: Cargo.toml
ghost-vt/assets/: xterm-kitty.terminfo
ghost-vt/docs/: cli-attach-policy.md  host-self-upgrade.md  session-coordination.md
ghost-vt/examples/: profile_host.rs
ghost-vt/proptest-regressions/: screen.txt
ghost-vt/src/: child.rs  client.rs  connection.rs  descriptor.rs  keys.rs  lib.rs  meta.rs  paths.rs  pipe.rs  protocol.rs  pty.rs  query.rs  record.rs  remote.rs  screen.rs  search.rs  server.rs  session.rs  signals.rs  terminfo.rs  transport.rs  watch.rs
vt/src/: buffer.rs  parser.rs  terminal.rs  vt.rs
xtask/: Cargo.toml
xtask/assets/: ghost.icns
xtask/src/: main.rs
