[workspace]
resolver = "3"
members = ["ghost-term", "ghost-vt", "ghost-render", "ghost-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

# Optimized build that keeps symbols, for profiling with perf/valgrind.
# Select with `cargo build --profile profiling`.
[profile.profiling]
inherits = "release"
debug = true
