[workspace]
resolver = "3"
members = [
    "ghost-term",
    "ghost-vt",
    "ghost-render",
    "ghost-cli",
    # Headless ghost (host + transport, no GUI) — the binary staged to remotes.
    "ghost-host",
    # The custom GPU frontend (winit/wgpu/swash). First-class workspace members:
    # `ghost` (the GUI binary) is the headline product; the rest are its crates.
    "ghost-ui-core",
    "ghost-shaper",
    "ghost-renderer",
    "ghost-ui-harness",
    "ghost-ui",
    "ghost-shot",
    "xtask",
]
# The vendored winit (see the patch below) is its own package, not a member.
exclude = ["vendor/winit"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

# Optimized build that keeps symbols, for profiling with perf/valgrind.
# Select with `cargo build --profile profiling`.
[profile.profiling]
inherits = "release"
debug = true

# Vendored winit 0.30.13 carrying two local patches, each to be reported
# upstream and then dropped:
# - `is_stateless()` recognises partially-tiled / snapped windows so the window
#   restores to its pre-snap size on Wayland/GNOME — see
#   vendor/winit/.../linux/wayland/window/state.rs (winit + smithay-client-toolkit).
# - macOS `insertText:` commits text arriving outside a key event (the
#   Character Viewer / Ctrl-Cmd-Space emoji palette, dictation), which the
#   marked-text-only gate silently dropped — see
#   vendor/winit/.../macos/view.rs (upstream winit#3342, milestoned 0.31).
[patch.crates-io]
winit = { path = "vendor/winit" }
