[package]
name = "ghost-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Reference CLI for ghost-vt: run terminals in the background and reattach to them."

[[bin]]
name = "ghost"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
ghost-vt = { path = "../ghost-vt" }
