[package]
name = "ghost-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The ghost CLI subcommands (new/ls/attach/kill/rename/export) over ghost-vt; a library composed into the `ghost` binary."

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
ghost-vt = { path = "../ghost-vt" }
