[package]
name = "ghost-host"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Headless ghost: the session host + SSH-transport relay, without the GUI. The binary staged to remote machines."
publish = false

# Deliberately GUI-free: only the backend (`ghost-vt`) and the CLI dispatch
# (`ghost-cli`). No winit/wgpu/swash/fontconfig, and no C deps (recordings use
# pure-Rust brotli) — so this cross-compiles with just `rustup target add` and
# needs no windowing/font libraries on the remote. This is what staging copies.
[dependencies]
ghost-cli = { path = "../ghost-cli" }
ghost-vt = { path = "../ghost-vt" }

[[bin]]
name = "ghost-host"
path = "src/main.rs"

[dev-dependencies]
ghost-vt = { path = "../ghost-vt" }
tempfile = "3"
