[package]
name = "ghost-renderer"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Offscreen/windowed GPU renderer for ghost-render frames (wgpu)."
publish = false

[dependencies]
ghost-render = { path = "../ghost-render" }
ghost-shaper = { path = "../ghost-shaper" }
# The terminal core: we resolve cell colors (ghost_term::Color) and, in tests,
# drive a real Vt through the whole stack.
ghost-term = { path = "../ghost-term" }
wgpu = "29"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
# Must match ghost-term's version exactly: the renderer recomputes per-char cell
# widths to place glyphs on the grid, and that must agree with the emulator's
# own wide-cell decisions or glyphs desync from the cells.
unicode-width = "0.1.13"
# PNG output is first-class: `Rendered::save_png` lets a test or a headless tool
# dump exactly what the renderer drew, for eyeballing and visual debugging.
png = "0.18"
# Cache-efficiency instrumentation: emit hit/miss stats under `RUST_LOG`, free
# when no subscriber enables the target. The binary installs the subscriber.
tracing = "0.1.44"
# Shape a cold frame's distinct runs in parallel — swash `shape` builds its own
# context per call, so it fans out cleanly across runs (the one-time cold cost of
# a dense colorized screen; warm re-rasters hit the cache and never reach it).
rayon = "1.12.0"

[dev-dependencies]
# The GPU benchmark names `wgpu::DeviceType` (from the `AdapterInfo` the default-GPU
# constructor returns) to decide teardown handling. Same version as the runtime dep.
wgpu = "29"
