[package]
name = "ghost-ui-core"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "ghost's pure UI core: input/effect/scene model, no winit or GPU."
publish = false

[dependencies]
ghost-term = { path = "../ghost-term" }
ghost-render = { path = "../ghost-render" }
ghost-vt = { path = "../ghost-vt" }
# Session groups persist across runs; the shell serializes them (TOML), the
# core only derives the shape.
serde = { version = "1", features = ["derive"] }
# Cache-efficiency instrumentation is emitted via `tracing`; free unless a
# subscriber (installed by the binary) enables the target under `RUST_LOG`.
tracing = "0.1.44"

[dev-dependencies]
# Property tests for the view-level damage/redraw soundness invariant (mirrors
# `ghost-term`'s `damage_audit`, one layer up). Pinned to the same version.
proptest = "=1.9.0"
