[package]
name = "ghost-ui"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "ghost — the windowed GPU terminal (winit + wgpu + ghost-renderer), with the CLI subcommands folded in."
publish = false
# Steers a bare `cargo run` at the workspace root to `ghost` (otherwise it's
# ambiguous against ghost-shot's binary). This leaves workspace.default-members
# alone, so bare `cargo build`/`cargo test` still cover every crate.
default-run = "ghost"

# The headline binary: `ghost` with no subcommand opens the GUI; with a subcommand
# (ls/attach/new/…, via ghost-cli) it runs that and exits.
[[bin]]
name = "ghost"
path = "src/main.rs"

[dependencies]
ghost-cli = { path = "../ghost-cli" }
ghost-ui-core = { path = "../ghost-ui-core" }
ghost-ui-harness = { path = "../ghost-ui-harness" }
ghost-renderer = { path = "../ghost-renderer" }
ghost-render = { path = "../ghost-render" }
ghost-shaper = { path = "../ghost-shaper" }
ghost-vt = { path = "../ghost-vt" }
ghost-term = { path = "../ghost-term" }
serde = { version = "1", features = ["derive"] }
toml = "1"
winit = "0.30"
wgpu = "29"
pollster = "0.4"
png = "0.18"
arboard = { version = "3.6", features = ["wayland-data-control"] }
# Filesystem watch on the session runtime dir: the set-change trigger that
# replaces steady session polling (state itself arrives over subscriptions).
notify = "8.2"
# Cache-efficiency (and any future) instrumentation is emitted via `tracing`; this
# installs the subscriber that turns `RUST_LOG` into filtered stderr output. Off by
# default (no target enabled), so instrumented code stays free in normal runs.
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Resolve a configured `[font] family` to a font file. fontconfig is the Linux font
# database; macOS uses CoreText instead (below). Other targets fall back to the
# bundled font.
[target.'cfg(target_os = "linux")'.dependencies]
fontconfig = "0.11"
# Emoji_Presentation property data: chars that default to emoji presentation
# route font fallback through fontconfig's `emoji` generic family, so they get
# the color emoji font instead of whatever monochrome face covers them.
unicode-properties = "0.1"

# The native macOS menu bar (see src/menu.rs) and CoreText font resolution (see
# src/font.rs). The objc2 crates are already in the tree via the vendored winit, so
# they pull in no new compiled crate; pinned to winit's 0.5/0.2 line to share its
# runtime types (Retained, MainThreadMarker). core-text 20 / core-foundation 0.9 match
# the core-graphics 0.23 line wgpu's Metal backend already pulls in, so nothing is
# duplicated. core-foundation is a direct dep for the glyph-fallback FFI
# (CTFontCreateForString wants CFString/CFRange and the TCFType ref conversions).
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
core-text = "20.1"
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = [
    "NSApplication",
    "NSMenu",
    "NSMenuItem",
    "NSEvent",
    "NSWindow",
    "NSResponder",
] }
objc2-foundation = { version = "0.2", features = ["NSString"] }

[dev-dependencies]
# The CLI end-to-end suite (moved here with the `ghost` binary) drives it over a PTY.
tempfile = "3"
pty-process = "0.5.3"
rustix = { version = "1.1.4", features = ["termios"] }
serde_json = "1.0.150"
