[package]
name = "ghost-vt"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Run a terminal in the background and reattach without losing scrollback, mouse, or keybindings."

[dependencies]
postcard = { version = "1.1.3", features = ["alloc"] }
serde = { version = "1.0.228", features = ["derive"] }
# The vendored avt fork: workspace member `vt/`, upstream package name `avt`,
# referred to locally as `vt`. Kept structurally close to upstream for rebasing.
vt = { package = "avt", path = "../vt" }
