[package]
name = "ghost-vt"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Run a terminal in the background and reattach without losing scrollback, mouse, or keybindings."

[dependencies]
dirs = "6.0.0"
libc = "0.2.186"
nix = { version = "0.31.3", features = ["signal"] }
notify = "8.2"
postcard = { version = "1.1.3", features = ["alloc"] }
pty-process = "0.5.3"
rustix = { version = "1.1.4", features = ["event", "termios", "process", "fs", "stdio", "pipe"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
# ghost's owned terminal-emulator core (forked from asciinema's avt; Apache-2.0).
ghost-term = { path = "../ghost-term" }
zstd = "0.13.3"

[dev-dependencies]
tempfile = "3"
