[package]
name = "ghost-gtk"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Native GTK/libadwaita terminal frontend for ghost."

[[bin]]
name = "ghost-gtk"
path = "src/main.rs"

[dependencies]
ghost-vt = { path = "../../ghost-vt" }
# v4_12 gates FontDialogButton (4.10, Preferences font picker) and
# CssProvider::load_from_string (4.12, window transparency); system GTK is 4.22.
gtk4 = { version = "0.11", features = ["v4_12"] }
# v1_5 gates adw::ToolbarView/OverlaySplitView (1.4) and AlertDialog (1.5);
# system libadwaita is 1.9.
adw = { package = "libadwaita", version = "0.9", features = ["v1_5"] }
vte4 = "0.10"
# User settings live in a hand-editable TOML file (see src/settings.rs).
serde = { version = "1", features = ["derive"] }
toml = "1"

[dev-dependencies]
tempfile = "3"

# Obj-C runtime access for the macOS Dock-menu integration (see `mod dock` in
# main.rs): GTK4 has no Dock-menu API, so we inject `applicationDockMenu:` into
# GTK's NSApplication delegate ourselves.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

# Detached from the ghost workspace on purpose: the core (vt / ghost-vt /
# ghost-cli) must build, test, and lint without GTK/VTE/libadwaita system libs,
# so this GUI frontend stands alone (built/linted with its own cargo commands).
# `xtask` (the macOS `.app` packager) is a std-only member of this side
# workspace — it never pulls GTK into the core workspace.
[workspace]
members = ["xtask"]
