# Detached workspace for ghost's custom frontend (the winit/wgpu/cosmic-text
# stack). Kept OUT of the root workspace + clippy gate so its heavy GPU/text
# deps never slow the core build — same pattern as ../ghost-gtk. It depends on
# the root crates (ghost-render, ghost-term) by path.
[workspace]
resolver = "3"
members = ["core", "shaper", "renderer", "app", "shot"]
