# Detached workspace for ghost's custom frontend (the winit/wgpu/cosmic-text
# stack). Kept OUT of the root workspace + clippy gate so its heavy GPU/text
# deps never slow the core build — same pattern as ../ghost-gtk. It depends on
# the root crates (ghost-render, ghost-term) by path.
[workspace]
resolver = "3"
members = ["core", "shaper", "renderer", "app", "shot"]
exclude = ["vendor/winit"]

# Vendored winit 0.30.13 carrying a one-line patch to `is_stateless()` (recognise
# partially-tiled / snapped windows) so the window restores to its pre-snap size on
# Wayland/GNOME — see vendor/winit/.../linux/wayland/window/state.rs. To be reported
# upstream (winit + smithay-client-toolkit), then dropped.
[patch.crates-io]
winit = { path = "vendor/winit" }
