[package]
name = "ghost-ui-harness"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Headless driver of the real ghost-ui frontend (model + renderer + damage) for tests and benchmarks, plus shared frame-pacing instrumentation."
publish = false

[dependencies]
ghost-ui-core = { path = "../core" }
ghost-renderer = { path = "../renderer" }
ghost-shaper = { path = "../shaper" }
ghost-render = { path = "../../../ghost-render" }
ghost-vt = { path = "../../../ghost-vt" }
